fixed on going projects title on mobile phones so it fits on properly

--- a/css/artwork.css
+++ b/css/artwork.css
@@ -277,7 +277,7 @@
     justify-content: start;
   } */
 
-  .slider .list .item .content h2 {
+  .slider .list .item .content h2, #projectTitle {
     font-size: 2.8rem;
     top: 40px;
   }
